# UWAFT-Software-Challenge

./: README.md  Setup_Competition_Map.m  pc_setup.md
0_libraries/matlab/qvl/: QuanserInteractiveLabs.m
1_setup/: configure_matlab.bat  pc_setup.md  step_1_check_requirements.bat
Quanser_Academic_Resources-dev-windows/: README.md  changelog.txt
Quanser_Academic_Resources-dev-windows/1_setup/: configure_matlab.bat  configure_python.bat  requirements.txt  step_1_check_requirements.bat
Quanser_Academic_Resources-dev-windows/1_setup/raspberry_pi/: system_setup.sh  venv_setup.sh
Quanser_Academic_Resources-dev-windows/2_quick_start_guides/mech_actuators_trainer/: quick_start_actuators.py
Quanser_Academic_Resources-dev-windows/2_quick_start_guides/mech_sensors_trainer/: quick_start_sensors.py
Quanser_Academic_Resources-dev-windows/5_research/mechatronic_trainers/: actuatorsSensorlessBLDC.py  actuatorsWriteAllBlocks.py  sensorsAndActuators.py  sensorsCameraMultiRate.py
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_interfaces/: CMakeLists.txt  package.xml
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_interfaces/action/: MoveQArm.action
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_interfaces/msg/: QArmDiagnostics.msg
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_nodes/: package.xml  setup.cfg  setup.py
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_nodes/launch/: move_qarm.py
Quanser_Academic_Resources-dev-windows/5_research/qarm/ROS Examples/ros2/src/qarm_nodes/qarm_nodes/: move_qarm_client.py  move_qarm_server.py  qarm_hardware.py  rgbd.py
Quanser_Academic_Resources-dev-windows/5_research/qarm_mini/: qarm_mini_basic_io.py  qarm_mini_basic_io_pwm.slx  qarm_mini_pick_and_place.slx
Quanser_Academic_Resources-dev-windows/7_outreach/STEM_Interactive_Exhibit/: config.txt
Quanser_Academic_Resources-dev-windows/docs/: getting_started.md  pc_setup.md
setup/: pc_setup.md  step_1_check_requirements.bat
student-competition-resources-matlab/: Challenge-Description.md  Virtual_MATLAB_Software_Setup.md
student-competition-resources-matlab-main/: README.md
student-competition-resources-matlab-main/Virtual_MATLAB_Resources/: MATLAB_FAQ.md  Virtual_MATLAB_Software_Setup.md  Virtual_to_Physical_Conversion_Guide.md
student-competition-resources-matlab-main/assets/: style.css
student-competition-resources-matlab/Virtual_MATLAB_Resources/: Virtual_MATLAB_Development_Guide.md  Virtual_MATLAB_Software_Setup.md
(+135 files in other folders)
